# obelisk

./: .gitignore  Cargo.toml  README.md  obelisk.toml
.beads/: .beads-credential-key  .gitignore  dolt-server.activity  last-touched  metadata.json  obelisk_sessions.jsonl
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/dolt/: .beads-credential-key  config.yaml
.beads/dolt/.dolt/: config.json  sql-server.info
.beads/dolt/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/.dolt/stats/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/bdOrc/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/logs/: obelisk.log.2026-03-12  obelisk.log.2026-03-13  obelisk.log.2026-03-14  obelisk.log.2026-03-16  obelisk.log.2026-03-18  obelisk.log.2026-03-19
docs/: agent-lifecycle.md  architecture.md  beads-integration.md  configuration.md  contributing.md  keybindings.md  troubleshooting.md
src/: app.rs  client.rs  cost.rs  daemon.rs  lib.rs  main.rs  notify.rs  runtime.rs  templates.rs  theme.rs  types.rs  ui.rs
src/app/: agents.rs  display.rs  init.rs  mod.rs  navigation.rs  pty.rs  queue.rs  session.rs  tests.rs  worktree.rs
src/templates/: bug.md  chore.md  epic.md  feature.md  task.md
src/ui/: agent_detail.rs  chromebar.rs  dashboard.rs  dep_graph.rs  dialogs.rs  event_log.rs  forms.rs  helpers.rs  history.rs  mod.rs  split_pane.rs  tests.rs  worktree.rs
tests/: core_business_logic.rs  pty_integration.rs
(+6 files in other folders)
