[package]
name = "obelisk"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
libc = "0.2"
portable-pty = "0.9"
vt100 = "0.16"
anyhow = "1"
toml = "0.8"
notify-rust = "4"
regex = "1"
arboard = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
